--- a/portfolio.html
+++ b/portfolio.html
@@ -315,6 +315,29 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-footer">
+          <!--треба приховати заголовок для цієї секції -->
+          <h2 class="visually-hidden">Наші можливості</h2>
+          <!--саме цей -->
+          <h3 class="subscribe-footer-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
+          <form class="subscribe-form">
+            <div class="subscribe-form-field">
+              <ul class="subscribe-list list">
+                <li>
+                  <textarea name="subscribe" id="subscribe" placeholder="E-mail"></textarea>
+                </li>
+                <li>
+                  <button class="subscribe-btn subscribe-btn-text" type="submit">
+                    Підписатися
+                    <svg class="subscribe-icon" width="24px" height="24px">
+                      <use href="./images/icons.svg#icon-send"></use>
+                    </svg>
+                  </button>
+                </li>
+              </ul>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
