--- a/index.html
+++ b/index.html
@@ -339,8 +339,7 @@
                   href="https://goo.gl/maps/SFuVJCe8wq69EAfA6"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
+                  >м. Київ, пр-т Лесі Українки, 26</a>
               </li>
               <li class="footer-address-item">
                 <a
@@ -391,56 +390,77 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-footer">
+          <!--треба приховати заголовок для цієї секції -->
+          <h2 class="visually-hidden">Наші можливості</h2>
+          <!--саме цей -->
+          <h3 class="subscribe-footer-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
+          <form class="subscribe-form">
+            <div class="subscribe-form-field">
+              <ul class="subscribe-list list">
+                <li>
+                  <textarea name="subscribe" id="subscribe" placeholder="E-mail"></textarea>
+                </li>
+                <li>
+                  <button class="subscribe-btn subscribe-btn-text" type="submit">
+                    Підписатися
+                    <svg class="subscribe-icon" width="24px" height="24px">
+                      <use href="./images/icons.svg#icon-send"></use>
+                    </svg>
+                  </button>
+                </li>
+              </ul>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="overlay-modal is-hidden" data-modal>
       <div class="modal"> 
-      <div class="modal-close">
         <button data-modal-close class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="11" height="11">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <form class="form-application">
-          <h1 class="form-title">
+          <p class="form-title">
             Залиште свої дані, ми вам передзвонимо
-          </h1>
-          <div class="form-field">
-            <label for="name">Ім'я</label>
-            <input type="text" name="name" id="name" class="modal-input" />
-            <svg class="form-icon" width="18px" height="18px">
-              <use href="./images/icons.svg#icon-name-form"></use>
-            </svg>
-          </div>
-          <div class="form-field">  
-            <label for="tel">Телефон</label>
-            <input type="text" name="tel" id="tel" class="modal-input" />
-            <svg class="form-icon" width="18px" height="18px">
-              <use href="./images/icons.svg#icon-tel-form"></use>
-            </svg>
-          </div>
-          <div class="form-field">
-            <label for="email">Пошта</label>
-            <input type="text" name="email" id="email" class="modal-input" />
-            <svg class="form-icon" width="18px" height="18px">
-              <use href="./images/icons.svg#icon-email-form"></use>
-            </svg>
-          </div>
-          <div class="form-field">
-            <label for="comment">Коментар</label>
-            <textarea name="" id="comment" placeholder="Введіть текст"></textarea>
-          </div>
-          <div class="form-agreement">
-            <label class="form-agreement-label">
-              <input class="checkbox-agreement" type="checkbox" name="agreement"/>
-              <span class="checkbox-icon"></span>
-              Погоджуюся з розсилкою та приймаю 
-              <a href="policy" class="form-agreement-yes">Умови договору</a>
-            </label>
-          </div>
-          <button class="form-btn form-btn-text" type="submit">Відправити</button>
-        </form>
-      </div>
+            </p>
+          <form class="form-application">
+            <div class="form-field">
+              <label for="name">Ім'я</label>
+              <input type="text" name="name" id="name" class="modal-input" />
+              <svg class="form-icon" width="18px" height="18px">
+                <use href="./images/icons.svg#icon-name-form"></use>
+              </svg>
+            </div>
+            <div class="form-field">  
+              <label for="tel">Телефон</label>
+              <input type="text" name="tel" id="tel" class="modal-input" />
+              <svg class="form-icon" width="18px" height="18px">
+                <use href="./images/icons.svg#icon-tel-form"></use>
+              </svg>
+            </div>
+            <div class="form-field">
+              <label for="email">Пошта</label>
+              <input type="text" name="email" id="email" class="modal-input" />
+              <svg class="form-icon" width="18px" height="18px">
+                <use href="./images/icons.svg#icon-email-form"></use>
+              </svg>
+            </div>
+            <div class="form-field">
+              <label for="comment">Коментар</label>
+              <textarea name="comment" id="comment" placeholder="Введіть текст"></textarea>
+            </div>
+            <div class="form-agreement">
+              <label class="form-agreement-label">
+                <input class="checkbox-agreement" type="checkbox" name="agreement"/>
+                <span class="checkbox-icon"></span>
+                Погоджуюся з розсилкою та приймаю 
+                <a href="policy" class="form-agreement-yes">Умови договору</a>
+              </label>
+            </div>
+            <button class="form-btn form-btn-text" type="submit">Відправити</button>
+          </form>
     </div>
     </div>
       <script src="./js/modal.js"></script>
