ДЗ6 остання версія

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         <div class="subscribe-footer">
           <p class="subscribe-footer-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
           <form class="subscribe-form">
-            <input name="subscribe" id="subscribe" placeholder="E-mail"></input>
+            <input name="subscribe" id="subscribe" placeholder="E-mail" />
             <button class="subscribe-btn subscribe-btn-text" type="submit">
               Підписатися
               <svg class="subscribe-icon" width="24px" height="24px">
@@ -433,7 +433,7 @@
                 <use href="./images/icons.svg#icon-email-form"></use>
               </svg>
             </div>
-            <div class="form-field">
+            <div class="form-field form-field-last">
               <label for="comment">Коментар</label>
               <textarea name="comment" id="comment" placeholder="Введіть текст"></textarea>
             </div>
@@ -441,7 +441,7 @@
               <label class="form-agreement-label">
                 <input class="checkbox-agreement" type="checkbox" name="agreement"/>
                 <span class="checkbox-icon"></span>
-                Погоджуюся з розсилкою та приймаю 
+                Погоджуюся з розсилкою та приймаю &nbsp;
                 <a href="policy" class="form-agreement-yes">Умови договору</a>
               </label>
             </div>
