--- a/portfolio.html
+++ b/portfolio.html
@@ -280,10 +280,7 @@
           </address>
         </div>
         <div class="social-footer">
-          <!--треба приховати заголовок для цієї секції -->
-          <h2 class="visually-hidden">Наші можливості</h2>
-          <!--саме цей -->
-          <h3 class="social-footer-title">ПРИЄДНУЙТЕСЬ</h3>
+          <p class="social-footer-title">ПРИЄДНУЙТЕСЬ</p>
           <ul class="social-footer-list list">
             <li class="social-footer-item">
               <a class="social-footer-link" href="">
@@ -316,26 +313,15 @@
           </ul>
         </div>
         <div class="subscribe-footer">
-          <!--треба приховати заголовок для цієї секції -->
-          <h2 class="visually-hidden">Наші можливості</h2>
-          <!--саме цей -->
-          <h3 class="subscribe-footer-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
+          <p class="subscribe-footer-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
           <form class="subscribe-form">
-            <div class="subscribe-form-field">
-              <ul class="subscribe-list list">
-                <li>
-                  <textarea name="subscribe" id="subscribe" placeholder="E-mail"></textarea>
-                </li>
-                <li>
-                  <button class="subscribe-btn subscribe-btn-text" type="submit">
-                    Підписатися
-                    <svg class="subscribe-icon" width="24px" height="24px">
-                      <use href="./images/icons.svg#icon-send"></use>
-                    </svg>
-                  </button>
-                </li>
-              </ul>
-            </div>
+            <input name="subscribe" id="subscribe" placeholder="E-mail" />
+            <button class="subscribe-btn subscribe-btn-text" type="submit">
+              Підписатися
+              <svg class="subscribe-icon" width="24px" height="24px">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
