--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
               <label class="form-agreement-label">
                 <input class="checkbox-agreement" type="checkbox" name="agreement"/>
                 <span class="checkbox-icon"></span>
-                Погоджуюся з розсилкою та приймаю &nbsp;
+                Погоджуюся з розсилкою та приймаю
                 <a href="policy" class="form-agreement-yes">Умови договору</a>
               </label>
             </div>
